k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: aura-backend
  namespace: cipherwatch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: aura-backend

  template:
    metadata:
      labels:
        app: aura-backend

    spec:
      containers:

      - name: backend

        image: ditisscdac/cipherwatch-backend:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 3000

        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"

          limits:
            cpu: "500m"
            memory: "1Gi"

        livenessProbe:
          httpGet:
            path: /health
            port: 3000

          initialDelaySeconds: 30
          periodSeconds: 20

        readinessProbe:
          httpGet:
            path: /health
            port: 3000

          initialDelaySeconds: 10
          periodSeconds: 10
