k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: aura-db
  namespace: cipherwatch

spec:
  replicas: 1

  selector:
    matchLabels:
      app: aura-db

  template:
    metadata:
      labels:
        app: aura-db

    spec:
      containers:

      - name: mysql

        image: mysql:8.0

        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 3306

        volumeMounts:

        - name: mysql-storage
          mountPath: /var/lib/mysql

        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"

          limits:
            cpu: "500m"
            memory: "1Gi"

      volumes:

      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
