k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: aura-backend-service
  namespace: cipherwatch

spec:

  selector:
    app: aura-backend

  ports:

  - port: 3000
    targetPort: 3000
    nodePort: 30080

  type: NodePort
