k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: aura-frontend-service
  namespace: cipherwatch

spec:

  selector:
    app: aura-frontend

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
