k8s/mysql-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: db
  namespace: cipherwatch

spec:

  selector:
    app: aura-db

  ports:

  - port: 3306
    targetPort: 3306

  type: ClusterIP
